deploy: 0169c810bfefd712bbd30f43ba534c9b9c5debdb

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/samaritan/commit/3d9744f
-"><code>3d9744f
+					<a href="https://github.com/notofonts/samaritan/commit/0169c81
+"><code>0169c81
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -60,7 +60,7 @@
 			</div>
 		</nav>
 		<div class="relative">
-			<h1 class="display-3 heading noto">ࠊࠋࠄࠀ ࠍࠔ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ⸱ࠅࠍࠁ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ⸱ࠅࠍࠁ⸱ࠅࠏࠍࠉࠄࠌ⸱ࠍࠏࠋࠉࠄࠌ⸱ࠋࠏࠔࠅࠕ⸱ࠀࠇࠃ⸱ࠋࠌࠏࠍ⸱ࠓࠏࠄࠅ⸱ࠁࠓࠅࠇ⸱ࠈࠅࠁࠄ⸱ࠊࠌࠅ⸱ࠀࠇࠉࠌ࠽ ࠎࠁࠁ ࠁࠀࠉࠒࠓࠀ ࠃࠆࠃࠒࠀ ࠊࠋࠄࠀ ࠍࠔ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ⸱ࠅࠍࠁ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ⸱ࠅࠍࠁ⸱ࠅࠏࠍࠉࠄࠌ⸱ࠍࠏࠋࠉࠄࠌ⸱ࠋࠏࠔࠅࠕ⸱ࠀࠇࠃ⸱ࠋࠌࠏࠍ⸱ࠓࠏࠄࠅ⸱ࠁࠓࠅࠇ⸱ࠈࠅࠁࠄ⸱ࠊࠌࠅ⸱ࠀࠇࠉࠌ࠽ ࠎࠁࠁ ࠁࠀࠉࠒࠓࠀ ࠃࠆࠃࠒࠀ</h1>
+			<h1 class="display-3 heading noto">ࠊࠋࠁࠓ ࠍࠔ ࠌࠍ ࠎࠁࠁ ࠌࠅࠃࠉࠕࠀ ࠁࠀࠉࠒࠓࠀ ࠋࠊࠋࠄ ࠐࠋࠈࠀ ࠃࠆࠃࠒࠀ ࠉࠁࠃࠏࠍࠀ ࠌࠇࠉࠃࠀ ࠂࠅ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ ࠊࠋࠁࠓ ࠍࠔ ࠌࠍ ࠎࠁࠁ ࠌࠅࠃࠉࠕࠀ ࠁࠀࠉࠒࠓࠀ ࠋࠊࠋࠄ ࠐࠋࠈࠀ ࠃࠆࠃࠒࠀ ࠉࠁࠃࠏࠍࠀ ࠌࠇࠉࠃࠀ ࠂࠅ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ</h1>
 
 			<div class="container p-5">
 				<h3>Fonts (HEAD build)</h3>
@@ -68,6 +68,16 @@
 				
 				<h4>Noto Sans Samaritan</h4>
 				<div class="row align-items-start"><ul>
+<li class="li-0">full<ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansSamaritan/full/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
+ </ul>
+ </ul>
+<li class="li-0">googlefonts<ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansSamaritan/googlefonts/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
+ </ul>
+ </ul>
 <li class="li-0">unhinted<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansSamaritan/unhinted/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
@@ -76,16 +86,6 @@
 <li class="li-0">hinted<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansSamaritan/hinted/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
- </ul>
- </ul>
-<li class="li-0">googlefonts<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansSamaritan/googlefonts/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
- </ul>
- </ul>
-<li class="li-0">full<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansSamaritan/full/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
  </ul>
  </ul>
  </ul></div>
