--- a/proof/text.html
+++ b/proof/text.html
@@ -149,7 +149,7 @@
       <div class="box">
 	<div class="box-title">Noto-Sans-Samaritan-Regular 14pt</div>
 	<span class="Noto-Sans-Samaritan-Regular" style="font-size: 14pt">
-	  ࠊࠋࠄࠀ ࠍࠔ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ⸱ࠅࠍࠁ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ⸱ࠅࠍࠁ⸱ࠅࠏࠍࠉࠄࠌ⸱ࠍࠏࠋࠉࠄࠌ⸱ࠋࠏࠔࠅࠕ⸱ࠀࠇࠃ⸱ࠋࠌࠏࠍ⸱ࠓࠏࠄࠅ⸱ࠁࠓࠅࠇ⸱ࠈࠅࠁࠄ⸱ࠊࠌࠅ⸱ࠀࠇࠉࠌ࠽ ࠎࠁࠁ ࠁࠀࠉࠒࠓࠀ ࠃࠆࠃࠒࠀ
+	  ࠊࠋࠁࠓ ࠍࠔ ࠌࠍ ࠎࠁࠁ ࠌࠅࠃࠉࠕࠀ ࠁࠀࠉࠒࠓࠀ ࠋࠊࠋࠄ ࠐࠋࠈࠀ ࠃࠆࠃࠒࠀ ࠉࠁࠃࠏࠍࠀ ࠌࠇࠉࠃࠀ ࠂࠅ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ
           </span>
        </div>
     
