deploy: 824cc357b587360bc507fb4a0531466d2c5d6b8e

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/samaritan/commit/0169c81
-"><code>0169c81
+					<a href="https://github.com/notofonts/samaritan/commit/824cc35
+"><code>824cc35
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -73,11 +73,6 @@
 <li><a href="fonts/NotoSansSamaritan/full/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
  </ul>
  </ul>
-<li class="li-0">googlefonts<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansSamaritan/googlefonts/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
- </ul>
- </ul>
 <li class="li-0">unhinted<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansSamaritan/unhinted/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
@@ -86,6 +81,11 @@
 <li class="li-0">hinted<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansSamaritan/hinted/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
+ </ul>
+ </ul>
+<li class="li-0">googlefonts<ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansSamaritan/googlefonts/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
  </ul>
  </ul>
  </ul></div>
@@ -110,6 +110,9 @@
 									</ul>
 
 				<ul>
+										<li>
+						<a href="qa/NotoSansSamaritan/Diffenator/Regular/report.html">Diffenator report, Regular</a>
+					</li>
 									</ul>
 				
 				<h3>Proof sheets</h3>
