--- a/proof/text.html
+++ b/proof/text.html
@@ -146,13 +146,11 @@
 </h2>
 	
   
-      <div class="box">
-	<div class="box-title">Noto-Sans-Samaritan-Regular 14pt</div>
-	<span class="Noto-Sans-Samaritan-Regular" style="font-size: 14pt">
-	  ࠊࠋࠁࠓ ࠍࠔ ࠌࠍ ࠎࠁࠁ ࠌࠅࠃࠉࠕࠀ ࠁࠀࠉࠒࠓࠀ ࠋࠊࠋࠄ ࠐࠋࠈࠀ ࠃࠆࠃࠒࠀ ࠉࠁࠃࠏࠍࠀ ࠌࠇࠉࠃࠀ ࠂࠅ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ
-          </span>
-       </div>
-    
+    <div class="box">
+      <div class="box-title">Noto-Sans-Samaritan-Regular 14pt</div>
+      <div dir="auto" class="Noto-Sans-Samaritan-Regular" style="font-size: 14pt">ࠊࠋࠁࠓ ࠍࠔ ࠌࠍ ࠎࠁࠁ ࠌࠅࠃࠉࠕࠀ ࠁࠀࠉࠒࠓࠀ ࠋࠊࠋࠄ ࠐࠋࠈࠀ ࠃࠆࠃࠒࠀ ࠉࠁࠃࠏࠍࠀ ࠌࠇࠉࠃࠀ ࠂࠅ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ</span>
+    </div>
+  
 
     </div>
 </body>
