--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/samaritan/commit/824cc35
-"><code>824cc35
+					<a href="https://github.com/notofonts/samaritan/commit/86c2e96
+"><code>86c2e96
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -60,7 +60,7 @@
 			</div>
 		</nav>
 		<div class="relative">
-			<h1 class="display-3 heading noto">ࠊࠋࠁࠓ ࠍࠔ ࠌࠍ ࠎࠁࠁ ࠌࠅࠃࠉࠕࠀ ࠁࠀࠉࠒࠓࠀ ࠋࠊࠋࠄ ࠐࠋࠈࠀ ࠃࠆࠃࠒࠀ ࠉࠁࠃࠏࠍࠀ ࠌࠇࠉࠃࠀ ࠂࠅ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ ࠊࠋࠁࠓ ࠍࠔ ࠌࠍ ࠎࠁࠁ ࠌࠅࠃࠉࠕࠀ ࠁࠀࠉࠒࠓࠀ ࠋࠊࠋࠄ ࠐࠋࠈࠀ ࠃࠆࠃࠒࠀ ࠉࠁࠃࠏࠍࠀ ࠌࠇࠉࠃࠀ ࠂࠅ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ</h1>
+			<h1 class="display-3 heading noto">ࠊࠋࠄࠀ ࠍࠔ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ⸱ࠅࠍࠁ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ⸱ࠅࠍࠁ⸱ࠅࠏࠍࠉࠄࠌ⸱ࠍࠏࠋࠉࠄࠌ⸱ࠋࠏࠔࠅࠕ⸱ࠀࠇࠃ⸱ࠋࠌࠏࠍ⸱ࠓࠏࠄࠅ⸱ࠁࠓࠅࠇ⸱ࠈࠅࠁࠄ⸱ࠊࠌࠅ⸱ࠀࠇࠉࠌ࠽ ࠎࠁࠁ ࠁࠀࠉࠒࠓࠀ ࠃࠆࠃࠒࠀ ࠊࠋࠄࠀ ࠍࠔ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ⸱ࠅࠍࠁ ࠊࠋ⸱ࠄࠀࠍࠔࠉࠌ⸱ࠍࠅࠋࠃࠅ⸱ࠇࠐࠔࠉࠌ⸱ࠅࠄࠌ⸱ࠀࠇࠃ⸱ࠊࠌࠅ⸱ࠄࠔࠍࠉ⸱ࠓࠊࠓࠅࠃ⸱ࠅࠓࠀࠔࠓ⸱ࠌࠂࠉࠏ⸱ࠋࠄࠊ࠽ࠉࠔ⸱ࠍࠊࠍ⸱ࠀࠇࠃ⸱ࠌࠄࠌ⸱ࠂࠍࠍ⸱ࠅࠍࠁ⸱ࠅࠏࠍࠉࠄࠌ⸱ࠍࠏࠋࠉࠄࠌ⸱ࠋࠏࠔࠅࠕ⸱ࠀࠇࠃ⸱ࠋࠌࠏࠍ⸱ࠓࠏࠄࠅ⸱ࠁࠓࠅࠇ⸱ࠈࠅࠁࠄ⸱ࠊࠌࠅ⸱ࠀࠇࠉࠌ࠽ ࠎࠁࠁ ࠁࠀࠉࠒࠓࠀ ࠃࠆࠃࠒࠀ</h1>
 
 			<div class="container p-5">
 				<h3>Fonts (HEAD build)</h3>
@@ -68,14 +68,20 @@
 				
 				<h4>Noto Sans Samaritan</h4>
 				<div class="row align-items-start"><ul>
-<li class="li-0">full<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansSamaritan/full/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
- </ul>
- </ul>
 <li class="li-0">unhinted<ul>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansSamaritan/unhinted/otf/NotoSansSamaritan-Regular.otf"> NotoSansSamaritan-Regular.otf</a></li>
+ </ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansSamaritan/unhinted/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
+ </ul>
+ </ul>
+<li class="li-0">full<ul>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansSamaritan/full/otf/NotoSansSamaritan-Regular.otf"> NotoSansSamaritan-Regular.otf</a></li>
+ </ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansSamaritan/full/ttf/NotoSansSamaritan-Regular.ttf"> NotoSansSamaritan-Regular.ttf</a></li>
  </ul>
  </ul>
 <li class="li-0">hinted<ul>
@@ -105,29 +111,34 @@
 
 				<ul>
 										<li>
-						<a href="fontbakery/googlefonts-NotoSansSamaritan-report.html">FontBakery Report (Google Fonts)</a>
+						<a href="fontbakery/notofonts-NotoSansSamaritan-googlefonts-report.html">FontBakery Report (Google Fonts)</a>
 					</li>
 									</ul>
 
 				<ul>
-										<li>
-						<a href="qa/NotoSansSamaritan/Diffenator/Regular/report.html">Diffenator report, Regular</a>
-					</li>
 									</ul>
-				
+
 				<h3>Proof sheets</h3>
 				<ul>
 					<li>
-						<a href="proof/glyphs.html">All glyphs</a>
+						Glyphs:
+							<a href="proof/NotoSansSamaritan/Regular-diffbrowsers_glyphs.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/text.html">Sample text</a>
+						Text:
+							<a href="proof/NotoSansSamaritan/Regular-diffbrowsers_text.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/waterfall.html">Waterfall test</a>
+						Waterfall:
+							<a href="proof/NotoSansSamaritan/Regular-diffbrowsers_waterfall.html">Regular</a> 
+					</li>
+					<li>
+						Proofer:
+							<a href="proof/NotoSansSamaritan/Regular-diffbrowsers_proofer.html">Regular</a> 
 					</li>
 				</ul>
-			</div>
+
+							</div>
 		</div>
 	</body>
 </html>
